--- a/wordpress_server.man
+++ b/wordpress_server.man
@@ -7,7 +7,7 @@
 wordpress_server \ diploy new wordpress server file on ubuntu server
 
 .SH SYNOPSIS
-wordpress_server <host username> <host ip>
+wordpress_server <server username> <server ip> <domain name(example.com)>
 
 .SH DESCRIPTION
 wordpress_server is smart command that deploy wordpress server on user specified ubuntu server. It will check on the server for prerequisite like, LAMP modules which include Apache, Mysql and PHP. If this modeules are not installed on server than wordpress_server will install this modules on that server.
